fix(searchbarv2) whitespace nowrap

--- a/app/styles/v2/Gumtree/ZA/partials/components/searchbarv2/_searchbarv2.scss
+++ b/app/styles/v2/Gumtree/ZA/partials/components/searchbarv2/_searchbarv2.scss
@@ -16,6 +16,7 @@
 		}
 
 		.location-link {
+			white-space:nowrap;
 			box-sizing: border-box;
 			height: 100%;
 			line-height: 43px;
